# sudoku

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/generator/: CMakeLists.txt  generator.cpp  generator.h
src/solver/: CMakeLists.txt  solver.h
src/sudoku/: CMakeLists.txt  sudoku.cpp  sudoku.h
src/sudoku/drawing_strategies/: CMakeLists.txt  console_drawing_strategy.cpp  console_drawing_strategy.h
src/visualization/: CMakeLists.txt  console.h  visualizer.h
standalone/: CMakeLists.txt
standalone/solver/: CMakeLists.txt  main.cpp
standalone/solver-app/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test.cpp
test/sudoku/: CMakeLists.txt  test_sudoku.cpp
